# rust-scaffold

./: Cargo.toml  README.md  justfile
config/: base.yaml  dev.yaml
proto/: app.proto
src/: build.rs  lib.rs  main.rs
src/config/: conf.rs  mod.rs  types.rs
src/controller/: mod.rs
src/controller/local/: mod.rs
src/controller/ping/: mod.rs
src/controller/remote/: mod.rs
src/controller/swarm/: mod.rs
src/di/: grpc.rs  mod.rs  p2p.rs
src/handler/: mod.rs
src/handler/grpc/: init.rs  inner.rs  inner2.rs  mod.rs
src/handler/p2p/: mod.rs
src/mapper/: mod.rs
src/mysql/: mock.rs  mod.rs  mysql.rs
src/util/: consts.rs  errors.rs  mod.rs  types.rs
tests/: integration_test.rs
