[package]
name = "app"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[lib]
name = "app"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.80"
config = "0.14.0"
env_logger = "0.11.3"
error-chain = "0.12.4"
log = "0.4.21"
mysql = "25.0.1"
runtime_injector = "0.4.0"
serde = "1.0.203"
serde_yaml = "0.9.34"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic = "0.11.0"
tower = "0.4.13"
prost = "0.12.0"
uuid = { version = "1.8.0", features = ["v4"] }
libp2p = { version = "0.53.2", features = [
    "kad",
    "tokio",
    "tcp",
    "tls",
    "dns",
    "noise",
    "websocket",
    "yamux",
    "mdns",
    "macros",
    "request-response",
    "cbor",
] }
libp2p-kad = "0.45.3"

[build-dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }

[dev-dependencies]
tempfile = "3.10.1"
